--- a/main.css
+++ b/main.css
@@ -1,3 +1,12 @@
 body {
 	background-color: #298eea;
 }
+
+.logo {
+	width: auto;
+	height: 35px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 100px;
+}
