--- a/main.css
+++ b/main.css
@@ -9,4 +9,16 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 100px;
+	margin-bottom: 35px;
+}
+
+.box {
+	background-color: white;
+	width: 400px;
+	height: 500px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	border-radius: 5px;
+
 }
