--- a/main.css
+++ b/main.css
@@ -29,5 +29,11 @@ h1 {
     font-weight: normal;
     font-size: 35px;
     color: #565656;
-
  }
+
+ .signup-form fieldset {
+ 	padding-left: 40px;
+ 	padding-right: 40px;
+  	border: none;
+ }
+ 
