--- a/main.css
+++ b/main.css
@@ -41,3 +41,11 @@ h1 {
  	display: block;
  	margin-bottom: 5px;
  }
+
+ .signup-form input {
+ 	width: 320px;
+ 	height: 55px;
+ 	border: 2px solid #e7e7e7;
+ 	border-radius: 5px;
+    margin-bottom: 15px;
+ }
