--- a/main.css
+++ b/main.css
@@ -56,8 +56,14 @@ h1 {
   font-size: 18px;
 }
 
-.signup-form input::::-moz-placeholder { /* Firefox 19+ */
+.signup-form input::::-moz-placeholder { 
+	/* Firefox 19+ */
   color: gray;
   font-size: 18px;
 }
 
+.demo-form input:-ms-input-placeholder { 
+	/* IE 10+ */
+  color: gray;
+  font-size: 18px;
+}
