--- a/main.css
+++ b/main.css
@@ -90,10 +90,14 @@ button {
 }
 
 .signup-form a {
-	color: gray;
+	color: #999;
 	font-size: 14px;
 }
 
+.signup-form a:hover {
+	border-color: #999;
+	color: #777;
+}
 
 
 
