--- a/main.css
+++ b/main.css
@@ -53,26 +53,30 @@ h1 {
 
  .signup-form input::-webkit-input-placeholder { 
  	/* Chrome/Opera/Safari */
-  color: gray;
+  color: #999;
   font-size: 18px;
+  padding: 15px;
 }
 
 .signup-form input::::-moz-placeholder { 
 	/* Firefox 19+ */
-  color: gray;
+  color: #999;
   font-size: 18px;
+  padding: 15px;
 }
 
 .signup-form input:-ms-input-placeholder { 
 	/* IE 10+ */
-  color: gray;
+  color: #999;
   font-size: 18px;
+  padding: 15px;
 }
 
 .signup-form input:-moz-placeholder {
  /* Firefox 18- */
-  color: gray;
+  color: #999;
   font-size: 18px;
+  padding: 15px;
 }
 
 button { 
