--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ body {
 .box {
 	background-color: white;
 	width: 400px;
-	height: 500px;
+	height: 470px;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
@@ -40,7 +40,8 @@ h1 {
  
  .signup-form label {
  	display: block;
- 	margin-bottom: 5px;
+ 	margin-top: 10px;
+ 	margin-bottom: 15px;
  }
 
  .signup-form input {
