--- a/main.css
+++ b/main.css
@@ -55,30 +55,30 @@ h1 {
 
  .signup-form input::-webkit-input-placeholder { 
  	/* Chrome/Opera/Safari */
-  color: #999;
-  font-size: 18px;
-  padding: 15px;
+	color: #999;
+  	font-size: 18px;
+  	padding: 15px;
 }
 
-.signup-form input::::-moz-placeholder { 
+.signup-form input::-moz-placeholder { 
 	/* Firefox 19+ */
-  color: #999;
-  font-size: 18px;
-  padding: 15px;
+  	color: #999;
+  	font-size: 18px;
+  	padding: 15px;
 }
 
 .signup-form input:-ms-input-placeholder { 
 	/* IE 10+ */
-  color: #999;
-  font-size: 18px;
-  padding: 15px;
+  	color: #999;
+  	font-size: 18px;
+  	padding: 15px;
 }
 
 .signup-form input:-moz-placeholder {
  /* Firefox 18- */
-  color: #999;
-  font-size: 18px;
-  padding: 15px;
+  	color: #999;
+  	font-size: 18px;
+  	padding: 15px;
 }
 
 button { 
